# int-dreal-artifact

./: .gitignore  Dockerfile  OVERVIEW.md  README.md
benchmarks/: CASE_STUDIES.md  REF.md  REUSE.md  benchmark_list.py  benchmark_statistics.py  environment.py  gen_figure_4.py  gen_figure_6.py  generate_table.py  getting_started_benchmark.py  int_dreal_benchmark.py  mathematica_benchmark.py  requirements.txt  run_figure_4.py  run_figure_5.py  run_figure_6.py
benchmarks/fairsquare/: high_inc_gd_00.fr
benchmarks/int-dreal/: eth_colrank_fair_00.smt2  eth_colrank_fair_01.smt2  eth_colrank_unfair_00.smt2  eth_colrank_unfair_01.smt2  gauss_forall_00.smt2  gauss_mech_00.smt2  gauss_mech_00_alt1.smt2  high_inc_gd_00.smt2  high_inc_gd_01.smt2  high_inc_gd_unfair_00.smt2  high_inc_gd_unfair_01.smt2  lap_acc_00.smt2  lap_acc_00_alt1.smt2  lap_acc_00_alt2.smt2  lap_acc_01.smt2  lap_acc_01_alt1.smt2  lap_acc_02.smt2  lap_acc_02_alt1.smt2  lap_mech_00.smt2  lap_mech_00_not_pri.smt2  lap_mech_sat_01.smt2  lap_mech_sat_01_not_pri.smt2  svt_gauss_00.smt2  svt_gauss_sat_00.smt2  vol_cmp_00.smt2  vol_cmp_00_forall.smt2  vol_cmp_01.smt2  vol_cmp_02.smt2  vol_cmp_02_forall.smt2  vol_cmp_03.smt2  vol_cmp_04.smt2  vol_cmp_04_forall.smt2  vol_cmp_05.smt2  vol_cmp_06.smt2  vol_cmp_06_forall.smt2  vol_cmp_07.smt2  vol_cmp_08.smt2  vol_cmp_08_forall.smt2  vol_cmp_09.smt2  vol_cmp_10.smt2  (+2 more)
benchmarks/mathematica/: eth_colrank_fair_00.wl  eth_colrank_fair_01.wl  eth_colrank_unfair_00.wl  eth_colrank_unfair_01.wl  gauss_forall_00.wl  gauss_mech_00.wl  gauss_mech_00_alt1.wl  high_inc_gd_00.wl  high_inc_gd_01.wl  high_inc_gd_unfair_00.wl  high_inc_gd_unfair_01.wl  lap_acc_00.wl  lap_acc_00_alt1.wl  lap_acc_00_alt2.wl  lap_acc_01.wl  lap_acc_01_alt1.wl  lap_acc_02.wl  lap_acc_02_alt1.wl  lap_mech_00.wl  lap_mech_00_not_pri.wl  lap_mech_sat_01.wl  lap_mech_sat_01_not_pri.wl  svt_gauss_00.wl  svt_gauss_sat_00.wl  vol_cmp_00.wl  vol_cmp_00_forall.wl  vol_cmp_01.wl  vol_cmp_02.wl  vol_cmp_02_forall.wl  vol_cmp_03.wl  vol_cmp_04.wl  vol_cmp_04_forall.wl  vol_cmp_05.wl  vol_cmp_06.wl  vol_cmp_06_forall.wl  vol_cmp_07.wl  vol_cmp_08.wl  vol_cmp_08_forall.wl  vol_cmp_09.wl  vol_cmp_10.wl  (+2 more)
benchmarks/results/: .gitignore
benchmarks/sample-results/: benchmark_statistics.csv  figure_4_results.csv  figure_5_results.csv  figure_6_results.csv  getting_started_results.csv  int_dreal_results.csv  mathematica_results.csv  table_3.csv
benchmarks/scale/: generate_graph.py
benchmarks/scale/integral_width_double/: generate.py  svt_product_eps_0.10_0.30_k_12.smt2  svt_product_eps_0.10_0.30_k_16.smt2  svt_product_eps_0.10_0.30_k_20.smt2  svt_product_eps_0.10_0.30_k_24.smt2  svt_product_eps_0.10_0.30_k_28.smt2  svt_product_eps_0.10_0.30_k_32.smt2  svt_product_eps_0.10_0.30_k_36.smt2  svt_product_eps_0.10_0.30_k_4.smt2  svt_product_eps_0.10_0.30_k_40.smt2  svt_product_eps_0.10_0.30_k_44.smt2  svt_product_eps_0.10_0.30_k_48.smt2  svt_product_eps_0.10_0.30_k_8.smt2  svt_product_eps_0.10_0.50_k_12.smt2  svt_product_eps_0.10_0.50_k_16.smt2  svt_product_eps_0.10_0.50_k_20.smt2  svt_product_eps_0.10_0.50_k_24.smt2  svt_product_eps_0.10_0.50_k_28.smt2  svt_product_eps_0.10_0.50_k_32.smt2  svt_product_eps_0.10_0.50_k_36.smt2  svt_product_eps_0.10_0.50_k_4.smt2  svt_product_eps_0.10_0.50_k_40.smt2  svt_product_eps_0.10_0.50_k_44.smt2  svt_product_eps_0.10_0.50_k_48.smt2  svt_product_eps_0.10_0.50_k_8.smt2  svt_product_eps_0.10_0.70_k_12.smt2  svt_product_eps_0.10_0.70_k_16.smt2  svt_product_eps_0.10_0.70_k_20.smt2  svt_product_eps_0.10_0.70_k_24.smt2  svt_product_eps_0.10_0.70_k_28.smt2  svt_product_eps_0.10_0.70_k_32.smt2  svt_product_eps_0.10_0.70_k_36.smt2  svt_product_eps_0.10_0.70_k_4.smt2  svt_product_eps_0.10_0.70_k_40.smt2  svt_product_eps_0.10_0.70_k_44.smt2  svt_product_eps_0.10_0.70_k_48.smt2  svt_product_eps_0.10_0.70_k_8.smt2  svt_product_eps_0.10_0.90_k_12.smt2  svt_product_eps_0.10_0.90_k_16.smt2  svt_product_eps_0.10_0.90_k_20.smt2  (+9 more)
benchmarks/scale/integral_width_triple/: generate.py  svt_gauss_00.smt2  svt_gauss_00_eps_0.10_0.30_k_1.smt2  svt_gauss_00_eps_0.10_0.30_k_2.smt2  svt_gauss_00_eps_0.10_0.30_k_3.smt2  svt_gauss_00_eps_0.10_0.30_k_4.smt2  svt_gauss_00_eps_0.10_0.50_k_1.smt2  svt_gauss_00_eps_0.10_0.50_k_2.smt2  svt_gauss_00_eps_0.10_0.50_k_3.smt2  svt_gauss_00_eps_0.10_0.50_k_4.smt2  svt_gauss_00_eps_0.10_0.70_k_1.smt2  svt_gauss_00_eps_0.10_0.70_k_2.smt2  svt_gauss_00_eps_0.10_0.70_k_3.smt2  svt_gauss_00_eps_0.10_0.70_k_4.smt2  svt_gauss_00_eps_0.10_0.90_k_1.smt2  svt_gauss_00_eps_0.10_0.90_k_2.smt2  svt_gauss_00_eps_0.10_0.90_k_3.smt2  svt_gauss_00_eps_0.10_0.90_k_4.smt2
benchmarks/scale/num_integrals/: generate.py  scale_integrals_var_1.smt2  scale_integrals_var_10.smt2  scale_integrals_var_100.smt2  scale_integrals_var_11.smt2  scale_integrals_var_12.smt2  scale_integrals_var_13.smt2  scale_integrals_var_14.smt2  scale_integrals_var_15.smt2  scale_integrals_var_16.smt2  scale_integrals_var_17.smt2  scale_integrals_var_18.smt2  scale_integrals_var_19.smt2  scale_integrals_var_2.smt2  scale_integrals_var_20.smt2  scale_integrals_var_21.smt2  scale_integrals_var_22.smt2  scale_integrals_var_23.smt2  scale_integrals_var_24.smt2  scale_integrals_var_25.smt2  scale_integrals_var_26.smt2  scale_integrals_var_27.smt2  scale_integrals_var_28.smt2  scale_integrals_var_29.smt2  scale_integrals_var_3.smt2  scale_integrals_var_30.smt2  scale_integrals_var_31.smt2  scale_integrals_var_32.smt2  scale_integrals_var_33.smt2  scale_integrals_var_34.smt2  (+71 more)
dreal4/: .gitignore  BUILD.bazel  WORKSPACE
dreal4/dreal/: BUILD.bazel  workspace.bzl
dreal4/tools/: dreal.bzl
fairsquare/: .gitignore  Dockerfile  docker-compose.yml  example-result.csv
fairsquare/dreal/: eth_colrank_fair_00.fr  high_income_gender_unfair_00.fr
fairsquare/src/: benchmark.py
ibex-lib/: .gitignore  CMakeLists.txt
ibex-lib/arb/: CMakeLists.txt
ibex-lib/cmake.utils/: ibex-config-utils.cmake
ibex-lib/examples/: integration.cpp  makefile  path-integration.cpp
ibex-lib/flint/: CMakeLists.txt
ibex-lib/src/: CMakeLists.txt
(+262 files in other folders)
